# jtil

./: CMakeLists.txt  DEPENDANCY_COMPILE_NOTES.txt  README.md  TO_BE_DONE.txt  gitInstructions.txt  jtil.sln  jtil.vcxproj  jtil.vcxproj.filters
include/jtil/: jtil.h
include/jtil/data_str/: circular_buffer.h  hash_funcs.h  hash_map.h  hash_map_managed.h  hash_set.h  min_heap.h  vector.h  vector_managed.h
include/jtil/debug_util/: debug_util.h
include/jtil/fastlz/: fastlz_helper.h
include/jtil/file_io/: csv_handle.h  csv_handle_read.h  csv_handle_write.h  data_str_serialization.h  file_io.h
include/jtil/image_util/: image_util.h
include/jtil/math/: bfgs.h  common_optimization.h  icp.h  icp_eigen_data.h  lm_fit.h  mat2x2.h  mat3x3.h  mat4x4.h  math_base.h  math_types.h  plane.h  pso.h  pso_parallel.h  quat.h  vec2.h  vec3.h  vec4.h
include/jtil/misc/: class_template.h
include/jtil/renderer/: g_buffer.h  gl_include.h  gl_state.h  lighting.h  post_processing.h  renderer.h
include/jtil/settings/: setting.h  setting_base.h  settings_manager.h
include/jtil/string_util/: string_util.h
include/jtil/threading/: callback.h  callback_queue.h  thread.h  thread_pool.h
include/jtil/ucl/: n2_99.ch  ucl.h  ucl_conf.h  ucl_helper.h
include/jtil/ui/: rocket_event_listener.h  rocket_file_interface.h  rocket_render_interface.h  rocket_system_interface.h  ui.h
include/jtil/video/: video_stream.h
include/jtil/windowing/: glfw.h  keys_and_buttons.h  message_dialog_win32.h  window.h  window_interface.h  window_settings.h
old_code/: OLD_test_simd_math.cpp
old_code/flann/: flann.hpp
old_code/flann/algorithms/: all_indices.h  autotuned_index.h  center_chooser.h  composite_index.h  dist.h  hierarchical_clustering_index.h  kdtree_index.h  kdtree_single_index.h  kmeans_index.h  linear_index.h  lsh_index.h  nn_index.h
old_code/flann/nn/: ground_truth.h  index_testing.h
old_code/flann/util/: logger.h  lsh_table.h  matrix.h  params.h  random.h  sampling.h  saving.h  serialization.h
old_code/math/: OLD_simd_macros.cpp  OLD_simd_macros.h
old_code/misc/: OLD_new_redefine.h  OLD_string_hasher.h  OLD_util.cpp  OLD_util.h
old_code/misc/OLD_simd_helpers/: cpuid.cpp  cpuid.h  simd_funcs.cpp  simd_funcs.h
old_code/object_manager/: object_manager.cpp  object_manager.h  object_manager_funcs_process_tokens.cpp
old_code/physics/: physics.cpp  physics.h
old_code/physics/collision_response/: collision.cpp  collision.h
old_code/physics/obbtree_related/: eig3.cpp  eig3.h  obbox.cpp  obbox.h  obbox_funcs_build.cpp  obbox_funcs_collision.cpp  obbox_funcs_render.cpp  obbox_renderitems.cpp  obbox_renderitems.h  obbox_rev21_original.bak.cpp  obbox_temp_var.h  obbtree.cpp  obbtree.h  obbtree_funcs_build.cpp  obbtree_funcs_collision.cpp  obbtree_temp_var.cpp  obbtree_temp_var.h  tri_tri_intersect.cpp  tri_tri_intersect.h
old_code/physics/objects/: aabbox.cpp  aabbox.h  rbobject.cpp  rbobject.h  rbobject_funcs_physics.cpp  rbobject_mesh.cpp  rbobject_mesh.h  rbobject_mesh_data.cpp  rbobject_mesh_data.h  rbobject_mesh_funcs_create.cpp  rbobject_mesh_funcs_empty_for_test_SIMDMath.cpp  rbobject_mesh_funcs_render.cpp
old_code/renderer/: dx_include.h  renderer.cpp  renderer.h  renderer_constants.h  renderer_funcs_init.cpp  renderer_funcs_render.cpp  renderer_funcs_render_g_buffer.cpp  renderer_funcs_render_lighting.cpp  renderer_funcs_render_post_process.cpp  renderer_funcs_render_sm.cpp  renderer_funcs_render_ssao.cpp
old_code/renderer/geometry/: OLD_geometry_instance_model.cpp  OLD_geometry_instance_model.h
old_code/renderer/renderer_structures/: cone.cpp  cone.h  d3d_formats.cpp  d3d_formats.h  debug_object.cpp  debug_object.h  drawable_tex2D.cpp  drawable_tex2D.h  drawable_texatlas2D.cpp  drawable_texatlas2D.h  renderer_state.cpp  renderer_state.h  sphere.cpp  sphere.h  tex_sampler_state.cpp  tex_sampler_state.h  vertex.cpp  vertex.h
old_code/renderer/skybox/: skybox.cpp  skybox.h
old_code/renderer/utils/: d3d_profiler.cpp  d3d_profiler.h
src/jtil/data_str/: hash_funcs.cpp
src/jtil/debug_util/: debug_util_macosx.cpp  debug_util_win32.cpp
src/jtil/exceptions/: wruntime_error.cpp
src/jtil/fastlz/: fastlz_helper.cpp
src/jtil/file_io/: csv_handle.cpp  csv_handle_read.cpp  csv_handle_write.cpp  data_str_serialization.cpp  file_io.cpp
src/jtil/glew/: glew.c  glewinfo.c  visualinfo.c
src/jtil/image_util/: image_util.cpp
src/jtil/math/: common_optimization.cpp  decompose.c  icp.cpp  icp_eigen_data.cpp  math_base.cpp  pso.cpp  pso_parallel.cpp
src/jtil/misc/: class_template.cpp
src/jtil/renderer/: g_buffer.cpp  gl_include.cpp  gl_state.cpp  lighting.cpp  post_processing.cpp  renderer.cpp
src/jtil/settings/: setting_base.cpp  settings_manager.cpp
src/jtil/string_util/: md5c.c  string_util.cpp
src/jtil/threading/: thread.cpp  thread_pool.cpp
src/jtil/ucl/: alloc.c  n2b_99.c  n2b_d.c  n2b_to.c  n2d_99.c  n2d_d.c  n2d_to.c  n2e_99.c  n2e_d.c  n2e_to.c  ucl_crc.c  ucl_helper.cpp  ucl_init.c  ucl_ptr.c  ucl_str.c  ucl_util.c
src/jtil/ui/: rocket_event_listener.cpp  rocket_file_interface.cpp  rocket_render_interface.cpp  rocket_system_interface.cpp  ui.cpp
src/jtil/video/: video_stream.cpp
src/jtil/windowing/: message_dialog_win32.cpp  window.cpp  window_macosx.cpp  window_settings.cpp  window_win32.cpp
tests/: .gitignore  CMakeLists.txt  settings_test.csv  tests.vcxproj  tests.vcxproj.filters
tests/headers/: test_callback.h  test_callback_queue.h  test_image_util.h  test_marching_squares.h  test_optimization.h  test_settings_manager.h  test_thread.h  test_thread_pool.h
tests/headers/test_data_str/: test_circular_buffer.h  test_hash_map.h  test_hash_map_managed.h  test_hash_set.h  test_min_heap.h  test_pair.h  test_vector.h  test_vector_managed.h
tests/headers/test_math/: optimization_test_functions.h  test_math_base.h  test_profile_simd_math.h  test_quaternion.h  test_vec2_mat2x2.h  test_vec3_mat3x3.h  test_vec4_mat4x4.h
tests/src/: test_all_tests.cpp
tests/src/test_math/: optimization_test_functions.cpp
utilities/: cpplint.py  style_check.py
(+80 files in other folders)
